--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         <input type="date" name="dueDate" placeholder="Due date" id="dueDate" required> 
     </form>
 </div>
+<div id="status"></div>
 <div class="btn">
     <button id="getRefund">Get Refund</button>
     <button id="post">Create Refund</button>
